--- a/www/source/tutorials/get-started/demo/add-services-to-group.html.slim
+++ b/www/source/tutorials/get-started/demo/add-services-to-group.html.slim
@@ -11,8 +11,9 @@ section
 
   p Start the third node, then switch between all three windows to see that each node has been connected to one another.
 
-  pre
-    code.console $ hab start core/postgresql -t leader --peer 172.17.0.2
+  = code(:shell) do
+    |
+     $ hab start core/postgresql -t leader --peer 172.17.0.2
 
   .window-buttons
     ul
