--- a/www/source/tutorials/get-started/demo/check-service-health.html.slim
+++ b/www/source/tutorials/get-started/demo/check-service-health.html.slim
@@ -9,8 +9,9 @@ section
 
   p To retrieve status for an individual service, specify the origin and package name in the <code>hab sup status</code> subcommand. Check the status of <code>example/myrubyapp</code> by entering the following into the terminal window:
 
-  pre
-    code.console $ hab sup status example/myrubyapp
+  = code(:shell) do
+    |
+     $ hab sup status example/myrubyapp
 
   p In addition to retrieving general status information about a service, the Supervisor also exposes service health, leader election results, census information, and other data through an HTTP API endpoint.
 
@@ -18,8 +19,9 @@ section
 
   p To see the results of a basic availability test for the Ruby-on-Rails application, enter the following:
 
-  pre
-    code.console $ curl http://172.17.0.3:9631/services/myrubyapp/default/health
+  = code(:shell) do
+    |
+     $ curl http://172.17.0.3:9631/services/myrubyapp/default/health
 
   p This health check is available by default when using the Ruby scaffolding to create your package.
 
