--- a/www/source/tutorials/get-started/demo/join-services.html.slim
+++ b/www/source/tutorials/get-started/demo/join-services.html.slim
@@ -4,13 +4,14 @@ title: Habitat - Join Services Together
 
 section
   h2 Join Services Together
-  
+
   p Having your applications automatically discover dependent services and configure themselves accordingly is useful when you need to set up connection information between tiers in a web application.
-  
+
   p In our example, the PostgreSQL database service exposes a port number that the Ruby-on-Rails web application needs in order to connect to the database. To set up service binding between the Rails front end and the PostgreSQL back end, you will restart the Rails app, but this time specifying the IP address of the Supervisor managing the back end and setting the bind argument to the service group name of the database. This will allow your Rails app to use that port number when it initializes itself and tries to connect to the database.
 
-  pre
-    code.console $ hab start example/myrubyapp --peer 172.17.0.2 --bind database:postgresql.default
+  = code(:shell) do
+    |
+     $ hab start example/myrubyapp --peer 172.17.0.2 --bind database:postgresql.default
 
   #window-node-1.window-node
     = partial "partials/terminal" do
