--- a/www/source/tutorials/get-started/demo/start-services.html.slim
+++ b/www/source/tutorials/get-started/demo/start-services.html.slim
@@ -14,8 +14,9 @@ section
   blockquote
     p Tip: If you mess up entering a command, hit the Up arrow on your keyboard to re-enter your command in the terminal window. You can fix your error without having to type the whole command over again.
 
-  pre
-    code.console $ hab start example/myrubyapp
+    = code(:shell) do
+      |
+       $ hab start example/myrubyapp
 
   .window-buttons
     ul
