Fixes some minor issues with &gt; char and tabs/spaces
* tabs and spaces don't mix well with the =code helper
* &gt; is not necessary with the code helper

Signed-off-by: Franklin Webber <franklin@chef.io>

--- a/www/source/partials/tutorials/_web_guide_connect_database.slim
+++ b/www/source/partials/tutorials/_web_guide_connect_database.slim
@@ -166,7 +166,7 @@ section
  = code(:shell) do
    |
     $ build
-    $ hab pkg export docker ./results/&lt;hart-filename>.hart && exit
+    $ hab pkg export docker ./results/<hart-filename>.hart && exit
 
  p Run the docker container for your web application.
 
@@ -209,7 +209,7 @@ section
  = code(:studio) do
    |
     $ build
-    $ hab pkg export docker ./results/&lt;hart-filename>.hart && exit
+    $ hab pkg export docker ./results/<hart-filename>.hart && exit
 
  p Because you're not interacting with another Habitat package as in the previous section, you do not need to set the service binding or join a ring with another service. Simply run the Docker container for your web application and set an exposed port so you can browse to your web application from your local workstation
 
