--- a/www/source/tutorials/sample-app/linux/build-package.html.slim
+++ b/www/source/tutorials/sample-app/linux/build-package.html.slim
@@ -64,7 +64,7 @@ section.sample-app
 
   = code(:shell) do
     |
-     [3][default:/src:0]# hab pkg export docker ./results/&lt;hart-filename>.hart
+     [3][default:/src:0]# hab pkg export docker ./results/<hart-filename>.hart
 
   p Because we need to connect to a PostgreSQL database managed by Habitat, export the PostgreSQL database package to a Docker container as well.
 
