--- a/www/source/partials/tutorials/_sample_app_build_package.slim
+++ b/www/source/partials/tutorials/_sample_app_build_package.slim
@@ -81,7 +81,7 @@ section.sample-app
   p Run <code>hab pkg export docker</code> and reference the .hart file you created in the previous section.
 
   = code(:studio) do
-    | [3][default:/src:0]# hab pkg export docker ./results/&lt;hart-filename>.hart
+    | [3][default:/src:0]# hab pkg export docker ./results/<hart-filename>.hart
 
   p Once you have finished exporting your package, exit out of the Studio.
 
