--- a/www/source/partials/tutorials/_sample_app_run_app.slim
+++ b/www/source/partials/tutorials/_sample_app_run_app.slim
@@ -18,7 +18,7 @@ section.sample-app
         volumes:
           - "./updated_config.toml:/updated_config.toml"
       railsapp:
-        image: &lt;myorg>/sample-rails-app
+        image: <myorg>/sample-rails-app
         ports:
           - 8000:8000
         links:
@@ -37,7 +37,7 @@ section.sample-app
 
  = code(:yaml) do
    |
-    image: &lt;myorg>/sample-rails-app
+    image: <myorg>/sample-rails-app
 
  p Save the file and exit the editor.
 
