--- a/www/source/partials/tutorials/_web_guide_connect_nginx.slim
+++ b/www/source/partials/tutorials/_web_guide_connect_nginx.slim
@@ -168,7 +168,7 @@ section
 
  = code(:studio) do
    |
-    $ hab pkg export docker ./results/&lt;reverse-proxy-file>.hart
+    $ hab pkg export docker ./results/<reverse-proxy-file>.hart
 
  h2 <a name="run-application">Run your package with your web application</a>
 
